# LLM-workshop-2024

./: .gitignore  pyproject.toml
02_data/: 02.ipynb
03_architecture/: 03.ipynb
04_pretraining/: 04.ipynb
05_weightloading/: 05_part-1.ipynb  05_part-2.ipynb
06_finetuning/: 06_part-1.ipynb  06_part-2.ipynb
