[tool.poetry]
name = "llm-workshop-2024"
version = "0.1.0"
description = ""
authors = ["BaronHsu <a53870628@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.1"
jupyterlab = ">=4.0"
tiktoken = ">=0.5.1"
matplotlib = ">=3.7.1"
numpy = ">=1.25,<2.0"
tensorflow = ">=2.15.0"
tqdm = ">=4.66.1"
pandas = ">=2.2.1"
psutil = ">=5.9.5"
litgpt = {version = ">=0.4.1", extras = ["all"]}
ipykernel = "^6.29.5"
ipython = "^8.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
